--- a/.github/workflows/build-public-ami.yml
+++ b/.github/workflows/build-public-ami.yml
@@ -11,7 +11,7 @@ on:
       - "*"
 
 env:
-  PACKER_VERSION: "1.6.6+ds1-4ubuntu0.22.04.2"
+  PACKER_VERSION: "1.10.2"
   PYTHON3_BOTO3_VERSION: "1.20.34+dfsg-1"
 
 jobs:
@@ -30,7 +30,7 @@ jobs:
       - name: Install aws cli
         run: |
           sudo apt update
-          sudo apt-get -y install packer=${PACKER_VERSION} python3-boto3=${PYTHON3_BOTO3_VERSION}
+          sudo apt-get -y install python3-boto3=${PYTHON3_BOTO3_VERSION}
 
       - name: Get the tag
         id: get_tag
@@ -56,6 +56,20 @@ jobs:
           aws-access-key-id: ${{ secrets.MARKETPLACE_ID }}
           aws-secret-access-key: ${{ secrets.MARKETPLACE_KEY }}
           aws-region: us-east-1
+
+      - name: Setup `packer`
+        uses: hashicorp/setup-packer@main
+        id: setup
+        with:
+          version: ${{ env.PACKER_VERSION }}
+        
+      - name: Run `packer init`
+        id: init
+        run: "packer init ./.github/packer/ubuntu-jammy-x86_64-public-ami.pkr.hcl"
+
+      - name: Run `packer validate`
+        id: validate
+        run: "packer validate ./.github/packer/ubuntu-jammy-x86_64-public-ami.pkr.hcl"
 
       - name: Create AMI and upload to marketplace
         run: |
