--- a/tests/antithesis/Dockerfile.workload
+++ b/tests/antithesis/Dockerfile.workload
@@ -8,6 +8,7 @@
 # ============= Compilation Stage ================
 FROM golang:1.21.8-bullseye AS builder
 
+WORKDIR /build
 # Copy and download avalanche dependencies using go mod
 COPY go.mod .
 COPY go.sum .
@@ -23,6 +24,6 @@ RUN ./scripts/build_antithesis_workload.sh
 FROM debian:11-slim AS execution
 
 # Copy the executables into the container
-COPY --from=builder /build/ .
+COPY --from=builder /build/build/ .
 
 CMD [ "./workload" ]
