--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -295,7 +295,7 @@ jobs:
         run: bash -x scripts/tests.build_image.sh
   govulncheck:
     runs-on: ubuntu-latest
-    name: Run govulncheck
+    name: govulncheck
     steps:
       - id: govulncheck
         uses: golang/govulncheck-action@v1
