--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,12 @@ jobs:
         shell: bash
         if: matrix.os == 'windows-2022'
         run: echo "TIMEOUT=240s" >> $GITHUB_ENV
+      - name: Install build dependencies not available by default on custom-arm64-focal runners
+        shell: bash
+        if: matrix.os == 'custom-arm64-focal'
+        run: |
+          sudo apt update
+          sudo apt -y install build-essentials
       - name: build_test
         shell: bash
         run: ./scripts/build_test.sh
