fixup: Add TODO to add a schedule

--- a/.github/workflows/trigger-antithesis-runs.yml
+++ b/.github/workflows/trigger-antithesis-runs.yml
@@ -1,6 +1,7 @@
 name: Trigger Antithesis Test Runs
 
 on:
+  # TODO(marun) Add a schedule to execute regularly
   workflow_dispatch:
     inputs:
       duration:
