--- a/.github/actionlint.yml
+++ b/.github/actionlint.yml
@@ -2,3 +2,5 @@ self-hosted-runner:
   labels:
     - custom-arm64-focal
     - custom-arm64-jammy
+    - net-outage-sim
+    - avalanche-avalanchego
