--- a/.github/workflows/check-bootstrap-testnet-full-sync.yml
+++ b/.github/workflows/check-bootstrap-testnet-full-sync.yml
@@ -1,22 +1,25 @@
-name: 'Check Bootstrap (testnet,state-sync)'
+name: 'Check Bootstrap (testnet,full-sync)'
 
 on:
   # TODO(marun) Add a schedule
   workflow_dispatch:
 
+  # TODO(marun) For testing only - remove before merge
+  pull_request:
+
 jobs:
-  check_bootstrap_testnet_state_sync:
-    name: Check Bootstrap (testnet,state-sync)
+  check_bootstrap_testnet_full_sync:
+    name: Check Bootstrap (testnet,full-sync)
     runs-on: avalanche-avalanchego
     timeout-minutes: 4320 # 3 days
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
-    - name: Check bootstrap (testnet,state-sync)
+    - name: Check bootstrap (testnet,full-sync)
       uses: ./.github/actions/check-bootstrap
       with:
         network_id: 5 # testnet
-        state_sync_enabled: true
+        state_sync_enabled: false
         prometheus_id: ${{ secrets.PROMETHEUS_ID || '' }}
         prometheus_password: ${{ secrets.PROMETHEUS_PASSWORD || '' }}
         loki_id: ${{ secrets.LOKI_ID || '' }}
