fixup: Ensure maximum timeout for testnet full sync

--- a/.github/workflows/check-bootstrap-testnet-full-sync.yml
+++ b/.github/workflows/check-bootstrap-testnet-full-sync.yml
@@ -11,6 +11,7 @@ jobs:
   check_bootstrap_testnet_full_sync:
     name: Check Bootstrap (testnet,full-sync)
     runs-on: avalanche-avalanchego
+    timeout-minutes: 7200 # 5 days, maximum allowed for jobs running on a self-hosted runner
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
