--- a/tests/antithesis/avalanchego/Dockerfile.node
+++ b/tests/antithesis/avalanchego/Dockerfile.node
@@ -1,8 +1,8 @@
-# TAG should identify the builder image
-ARG TAG
+# BUILDER_IMAGE_TAG should identify the builder image
+ARG BUILDER_IMAGE_TAG
 
 # ============= Compilation Stage ================
-FROM antithesis-avalanchego-builder:$TAG AS builder
+FROM antithesis-avalanchego-builder:$BUILDER_IMAGE_TAG AS builder
 
 # The workdir is hard-coded since this Dockerfile is only intended for instrumented builds.
 WORKDIR /instrumented/customer
