--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0.199", features = ["derive"] }
 smallvec = { version = "1.13.2", features = ["serde", "write", "union"] }
 sha2 = "0.10.8"
 integer-encoding = "4.0.0"
+arc-swap = "1.7.1"
 lru = "0.12.4"
 
 [dev-dependencies]
