--- a/tests/antithesis/Dockerfile.builder-instrumented
+++ b/tests/antithesis/Dockerfile.builder-instrumented
@@ -9,13 +9,18 @@ FROM docker.io/antithesishq/go-instrumentor AS instrumentor
 FROM golang:$GO_VERSION-bullseye
 
 WORKDIR /build
-# Copy and download dependencies using go mod
-COPY go.mod .
-COPY go.sum .
-RUN go mod download
 
 # Copy the code into the container
 COPY . .
+
+# Providing a non-empty MODULE_PATH supports the case where the target module is
+# not at the root of the repo but its go.mod references other modules in the repo
+# (including the root).
+ARG MODULE_PATH=.
+
+# Download dependencies for the specified go module if a path was provided,
+# otherwise download dependencies for the current directory.
+RUN cd $MODULE_PATH && go mod download
 
 # Ensure pre-existing builds are not available for inclusion in the final image
 RUN [ -d ./build ] && rm -rf ./build/* || true
@@ -38,7 +43,7 @@ RUN cp -r .git /opt/tmp/
 RUN /opt/antithesis/bin/goinstrumentor \
     -stderrthreshold=INFO \
     -antithesis /opt/antithesis/instrumentation \
-    . \
+    $MODULE_PATH \
     /instrumented
 
 WORKDIR /instrumented/customer
