--- a/tests/antithesis/Dockerfile.builder-uninstrumented
+++ b/tests/antithesis/Dockerfile.builder-uninstrumented
@@ -9,16 +9,14 @@ WORKDIR /build
 # Copy the code into the container
 COPY . .
 
-# Download dependencies of the main go module
-RUN go mod download
-
 # Providing a non-empty MODULE_PATH supports the case where the target module is
 # not at the root of the repo but its go.mod references other modules in the repo
 # (including the root).
-ARG MODULE_PATH
+ARG MODULE_PATH=.
 
-# Download dependencies for the specified go module if a path was provided
-RUN [ -n $MODULE_PATH ] && (cd $MODULE_PATH && go mod download) || true
+# Download dependencies for the specified go module if a path was provided,
+# otherwise download dependencies for the current directory.
+RUN cd $MODULE_PATH && go mod download
 
 # Ensure pre-existing builds are not available for inclusion in the final image
 RUN [ -d ./build ] && rm -rf ./build/* || true
