--- a/.github/workflows/build-macos-release.yml
+++ b/.github/workflows/build-macos-release.yml
@@ -19,6 +19,9 @@ jobs:
   build-mac:
     # The type of runner that the job will run on
     runs-on: macos-12
+    permissions:
+      id-token: write
+      contents: read
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
