--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, ubuntu-20.04, ubuntu-22.04, windows-2022, custom-arm64-focal, custom-arm64-jammy]
+        os: [macos-12, ubuntu-20.04, ubuntu-22.04, ubuntu-24.04, windows-2022, custom-arm64-jammy, custom-arm64-noble]
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/actions/install-focal-deps
-        if: matrix.os == 'custom-arm64-focal'
       - uses: ./.github/actions/setup-go-for-project
       - name: Set timeout on Windows # Windows UT run slower and need a longer timeout
         shell: bash
@@ -41,7 +39,7 @@ jobs:
         env:
           TIMEOUT: ${{ env.TIMEOUT }}
   Fuzz:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-go-for-project
