--- a/.github/workflows/build-linux-binaries.yml
+++ b/.github/workflows/build-linux-binaries.yml
@@ -74,15 +74,13 @@ jobs:
           rm -rf /tmp/avalanchego
 
   build-arm64-binaries-tarball:
-    runs-on: custom-arm64-focal
+    runs-on: custom-arm64-jammy
     permissions:
       id-token: write
       contents: read
 
     steps:
       - uses: actions/checkout@v4
-
-      - uses: ./.github/actions/install-focal-deps
 
       - uses: ./.github/actions/setup-go-for-project
 
@@ -124,7 +122,7 @@ jobs:
           TAG: ${{ env.TAG }}
           BUCKET: ${{ secrets.BUCKET }}
           ARCH: "arm64"
-          RELEASE: "focal"
+          RELEASE: "jammy"
 
       - name: Save as Github artifact
         uses: actions/upload-artifact@v4
