--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Run e2e tests
         uses: ./.github/actions/run-monitored-tmpnet-cmd
         with:
-          run: E2E_SERIAL=1 ./scripts/tests.e2e.sh --delay-network-shutdown --activate-etna
+          run: E2E_RANDOM_SEED=1727454094 E2E_SERIAL=1 ./scripts/tests.e2e.sh --delay-network-shutdown --activate-etna
           prometheus_id: ${{ secrets.PROMETHEUS_ID || '' }}
           prometheus_password: ${{ secrets.PROMETHEUS_PASSWORD || '' }}
           loki_id: ${{ secrets.LOKI_ID || '' }}
